# gameserver

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MsgPackUpdateTracker.h  make.sh
dbg/print_shm/: CMakeLists.txt
dbg/print_shm/src/: main.cpp
dbg/show_shm_layout/: CMakeLists.txt
dbg/show_shm_layout/src/: main.cpp
docker4bots/: 00_build_all_base_containers.sh  00_setup_shm_for_test.sh  01_build_all_docs_for_website.sh  0_build_spn_base_container.sh  0_build_spn_cpp_base.sh  1_build_doc.sh  1_build_spn_bot.sh  1_build_spn_cpp_bot.sh  2_run_debug_container.sh  2_run_spn_bot.sh  2_run_spn_cpp_bot.sh  99_cleanup.sh  config.sh
docker4bots/spn_cpp_base/: Dockerfile  bot_wrapper.sh
docker4bots/spn_cpp_base/spn_cpp_framework/: CMakeLists.txt  Doxyfile
docker4bots/spn_cpp_base/spn_cpp_framework/src/: bot_api.h  doxygen_mainpage.h  ipc_format.h  main.cpp  usercode.cpp  usercode.h
docker4bots/spn_cpp_bot/: Dockerfile
docker4bots/spn_python_base/: Dockerfile  bot_wrapper.sh
docker4bots/spn_python_base/spn_python_framework/: Doxyfile  pylintrc
docker4bots/spn_python_base/spn_python_framework/src/: api.py  main.py
docker4bots/spn_rust_base/: Dockerfile  bot_wrapper.sh
docker4bots/spn_rust_base/spn_rust_framework/: Cargo.toml  build.sh
docker4bots/spn_rust_base/spn_rust_framework/src/: api.rs  ipc.rs  main.rs  usercode.rs
docker4bots/spn_rust_base/spn_rust_framework/src/api/: ipc.rs
lua/: demobot.lua  quota.lua
src/: Bot.cpp  Bot.h  BotThreadPool.cpp  BotThreadPool.h  BotUpDownThread.cpp  BotUpDownThread.h  Database.cpp  Database.h  DockerBot.cpp  DockerBot.h  Environment.h  Field.cpp  Field.h  Food.cpp  Food.h  GUIDGenerator.cpp  GUIDGenerator.h  Game.cpp  Game.h  GlobalView.cpp  GlobalView.h  IdentifyableObject.cpp  IdentifyableObject.h  LocalView.cpp  LocalView.h  LuaBot.cpp  LuaBot.h  MsgPackAdaptors.h  MsgPackProtocol.h  MsgPackUpdateTracker.cpp  MsgPackUpdateTracker.h  PoolAllocator.cpp  PoolAllocator.h  PositionObject.h  Semaphore.h  Snake.cpp  Snake.h  SpatialMap.cpp  SpatialMap.h  Stopwatch.cpp  (+8 more)
src/lua/: LuaBot.cpp  LuaBot.h  LuaFoodInfo.cpp  LuaFoodInfo.h  LuaSegmentInfo.cpp  LuaSegmentInfo.h  LuaSelfInfo.cpp  LuaSelfInfo.h  PoolAllocator.cpp  PoolAllocator.h
test/: CMakeLists.txt  growth_formula.py  parse_packet_lengths.py  rotation_angle.py  socket_server.py  test_poolalloc.cpp
