[package]
name = "spn_rust_bot"
version = "0.1.0"
authors = ["Thomas Kolb <cfr34k-git@tkolb.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for shared memory
memmap2    = "0.5"

# for UNIX SEQPACKET socket communication
uds        = "0.2.6"

# for easier checking and conversion of enum values
num-traits = "0.2"
num-derive = "0.3"
num        = "0.4"
